--- a/jaxb-ri/glassfish/v3/pom.xml
+++ b/jaxb-ri/glassfish/v3/pom.xml
@@ -3,7 +3,7 @@
 
  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  
- Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ Copyright 1997-2013 Sun Microsystems, Inc. All rights reserved.
  
  The contents of this file are subject to the terms of either the GNU
  General Public License Version 2 only ("GPL") or the Common Development
@@ -82,7 +82,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>javax.xml.bind</groupId>
-                                    <artifactId>jaxb-api-osgi</artifactId>
+                                    <artifactId>jaxb-api</artifactId>
                                     <version>${jaxb.api.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
