fix default unit test location

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -45,7 +45,7 @@ release.impl.version.suffix=-SNAPSHOT
 
 # root workspace
 jaxb.root=${basedir}
-jaxb-unit.root=${basedir}/../jaxb-unit
+jaxb-unit.root=${basedir}/../../jaxb-unit
 
 tools.root=${basedir}/tools
 jaxb.libs=${tools.root}/lib
