Fix push-release-to-maven ant task

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -129,6 +129,7 @@ javadoc.nodeprecation=false
 # OSGi
 osgi.root=${jaxb.root}/osgi
 osgi.build=${osgi.root}/build
+osgi.dist=${jaxb.dist}/osgi
 osgi.build.rt=${osgi.root}/build/rt
 
 jaxb.samples=${basedir}/samples
@@ -154,5 +155,8 @@ xsom.mvn.path=com/sun/xsom/xsom/${xsom.version}/xsom-${xsom.version}.jar
 
 jaxb.version=${release.impl.version}${release.impl.version.suffix}
 jaxb-osgi.mvn.path=com/sun/xml/bind/jaxb-osgi/${jaxb.version}/jaxb-osgi-${jaxb.version}.jar
+
+fi.version=1.2.12
+istack-commons.version=2.16
 
 # JAXB Source build Properties ------END------
