--- a/jaxb-ri/jxc/src/main/resources/com/sun/tools/jxc/MessageBundle.properties
+++ b/jaxb-ri/jxc/src/main/resources/com/sun/tools/jxc/MessageBundle.properties
@@ -45,10 +45,10 @@ BASEDIR_DOESNT_EXIST = \
     Non-existent directory: {0}
 
 VERSION = \
-	schemagen @@BUILD_VERSION@@
+	schemagen ${version}
 
 FULLVERSION = \
-	schemagen full version "@@BUILD_VERSION@@"
+	schemagen full version "${version}"
 
 USAGE = \
 Usage: schemagen [-options ...] <java files> \n\
