--- a/jaxb-ri/xjc/pom.xml
+++ b/jaxb-ri/xjc/pom.xml
@@ -103,4 +103,65 @@ holder.
         </dependency>
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <archive>
+                            <manifestEntries>
+                                <Specification-Title>Java Architecture for XML Binding</Specification-Title>
+                                <Specification-Version>2.2</Specification-Version>
+                                <Implementation-Title>JAXB Implementation</Implementation-Title>
+                                <Implementation-Version>${project.version}</Implementation-Version>
+                                <Implementation-Vendor>Oracle</Implementation-Vendor>
+                                <Implementation-Vendor-Id>com.oracle</Implementation-Vendor-Id>
+                                <Build-Id>${project.version}</Build-Id>
+                                <!--TODO: add GIT revision-->
+                                <Build-Version>JAXB RI ${project.version}</Build-Version>
+                                <Major-Version>${project.osgi.version}</Major-Version>
+                                <manifest>
+                                    <mainClass>com.sun.tools.xjc.XJCFacade</mainClass>
+                                </manifest>
+                                <manifestEntries>
+                                    <Class-Path>jaxb-core.jar jaxb-impl.jar</Class-Path>
+                                    <Extension-Name>com.sun.tools.xjc</Extension-Name>
+                                </manifestEntries>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.6</version>
+                    <executions>
+                        <execution>
+                            <id>copy-resources</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>copy-resources</goal>
+                            </goals>
+                            <configuration>
+                                <outputDirectory>${basedir}/target/classes/com/sun/tools/xjc/runtime</outputDirectory>
+                                <resources>
+                                    <resource>
+                                        <directory>src/main/java/com/sun/tools/xjc/runtime</directory>
+                                        <filtering>false</filtering>
+                                    </resource>
+                                </resources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
