Fix maven build.
- add coverage
- fix dev profile

Change-Id: Icb833b9df812f21aded99c33a158e5921116369d

--- a/jaxb-ri/bundles/pom.xml
+++ b/jaxb-ri/bundles/pom.xml
@@ -56,6 +56,10 @@ holder.
     <name>JAXB bundles</name>
     <description>JAXB bundles module.</description>
 
+    <properties>
+        <findbugs.skip>true</findbugs.skip>
+    </properties>
+
     <modules>
         <module>core</module>
         <module>runtime</module>
