add exclude files for findbugs
Change-Id: I1d57d95fa3dfda4c0b7d1b02a2542cefe1dce481

--- a/jaxb-ri/runtime/impl/pom.xml
+++ b/jaxb-ri/runtime/impl/pom.xml
@@ -58,6 +58,10 @@ holder.
     <name>JAXB Runtime</name>
     <description>JAXB (JSR 222) Reference Implementation</description>
 
+    <properties>
+        <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
