first part of changes adapting to upgarde JAXP to 1.5
Change-Id: I7f1a1d5b0f3fa60333e92d9bef3cb2b3de615a4d

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /jaxb-ri/tools/lib/util/jing-rnc-driver.jar
 *.class
 /jaxb-ri/nbproject/private/
-/.idea/
+.idea
 .DS_Store
 /jaxb-ri/bundles/core/target/
 /jaxb-ri/bundles/jxc/target/
@@ -25,4 +25,5 @@
 /jaxb-ri/runtime/staxex/target/
 /jaxb-ri/samples/target/
 /jaxb-ri/xjc/target/
+*.iml
 
