--- a/jaxb-ri/boms/bom-ext/pom.xml
+++ b/jaxb-ri/boms/bom-ext/pom.xml
@@ -49,7 +49,7 @@
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-bom</artifactId>
         <relativePath>../bom/pom.xml</relativePath>
-        <version>2.2.8-SNAPSHOT</version>
+        <version>2.2.8-b02</version>
     </parent>
 
     <groupId>com.sun.xml.bind</groupId>
@@ -159,6 +159,21 @@
                 <groupId>net.java.dev.msv</groupId>
                 <artifactId>msv-core</artifactId>
                 <version>${msv.version}</version>
+            </dependency>
+            <dependency> <!-- xjc dependency... needed to be specified for xjc maven-dependency-plugin -->
+                <groupId>relaxngDatatype</groupId>
+                <artifactId>relaxngDatatype</artifactId>
+                <version>${relaxngDatatype.version}</version>
+            </dependency>
+            <dependency> <!--for osgi sources-->
+                <groupId>net.java.dev.msv</groupId>
+                <artifactId>xsdlib</artifactId>
+                <version>${msv.version}</version>
+            </dependency>
+            <dependency> <!--for osgi sources-->
+                <groupId>com.sun.xml.bind.jaxb</groupId>
+                <artifactId>isorelax</artifactId>
+                <version>${isorelax.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
