Fixes of mvn config.
- Clean jaxb-bom
- Restored SNAPSHOT version
- plugins versions fixed

Change-Id: I1c2c37f1c5af51c42a7f1d67da0abb62200e54c2

--- a/jaxb-ri/bundles/osgi/extra/pom.xml
+++ b/jaxb-ri/bundles/osgi/extra/pom.xml
@@ -72,6 +72,25 @@ holder.
 
     <build>
         <plugins>
+<!--    Can be used to build everything from sources
+            <plugin>
+                <groupId>org.glassfish.build</groupId>
+                <artifactId>glassfishbuild-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-sources</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>unpack-sources</goal>
+                        </goals>
+                        <configuration>
+                            <attachSources>true</attachSources>
+                            <excludeTransitive>true</excludeTransitive>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+-->
             <plugin> <!-- want to unpack sources from individual modules -->
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
