--- a/jaxb-ri/bundles/pom.xml
+++ b/jaxb-ri/bundles/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-parent</artifactId>
-        <version>2.2.8-b02</version>
+        <version>2.2.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxb-bundles</artifactId>
