jxc fbugs fixes
Change-Id: I7bdc5410d0b1ac1f909f9455b1f236484e9f69ad

--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -60,6 +60,10 @@ holder.
         <!--todo: finish me-->
     </description>
 
+    <properties>
+        <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
