make sure we depend on a single version of each artifact
Change-Id: I09c271113aa67ef38738385bab5eacbec7998038

--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -383,6 +383,7 @@ holder.
                         <requireMavenVersion>
                             <version>[3.0.3,)</version>
                         </requireMavenVersion>
+                        <DependencyConvergence/>
                     </rules>
                 </configuration>
             </plugin>
