excludes for msv
Change-Id: I054d87bfadcda967e2f084aab2ca1bf3f6c086fd

--- a/jaxb-ri/bundles/osgi/extra/pom.xml
+++ b/jaxb-ri/bundles/osgi/extra/pom.xml
@@ -68,6 +68,7 @@ holder.
 
     <properties>
         <generated.sources.dir>${project.build.directory}/generated-sources</generated.sources.dir>
+        <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
     </properties>
 
     <build>
